--- a/lab02/drag/index.html
+++ b/lab02/drag/index.html
@@ -23,8 +23,8 @@
             margin: 30px;
         }
     </style>
-     <script src="/jQuery-P.js"></script>
-     <script src="/jquery-ui.min.js"></script>
+     <script src="jQuery-P.js"></script>
+     <script src="jquery-ui.min.js"></script>
      <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
      <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> -->
     <title>drag</title>
@@ -37,6 +37,9 @@
         $(function(){
 
             $( "#draggable" ).draggable();
+            $("#draggable").hover(function(){
+                $(this).effect("shake")
+            })
             $( "#droppable" ).droppable({
                 drop: function( event, ui ) {
                     // $( "#droppable" ).fadeTo(500,0,function(){
